--- a/src/schedule.html
+++ b/src/schedule.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="components/Common/styles.css">
-  <link rel="stylesheet" href="schedule.css">
+  <link rel="stylesheet" href="components/Schedule/Schedule.css">
   <link rel="stylesheet" href="Fonts/flaticon.css">
   <link rel="stylesheet" href="Fonts/vazir-fonts/fonts.css">
 
